--- a/app/users.html
+++ b/app/users.html
@@ -584,13 +584,27 @@
                                     </button>
                                 </span>
                             </div>
-                            <div class="form-group input-group">
-                                <div class="fixed">
-                                    <input name="online" id="online" type="checkbox" value="1">
+                            <div class="row">
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 full-xxs">
+                                    <div class="form-group input-group auto-width">
+                                        <div class="fixed">
+                                            <input name="online" id="online" type="checkbox" value="1">
+                                        </div>
+                                        <label for="online">
+                                            Сейчас на сайте
+                                        </label>
+                                    </div>
                                 </div>
-                                <label for="online">
-                                    Сейчас на сайте
-                                </label>
+                                <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6 full-xxs">
+                                    <div class="form-group input-group auto-width">
+                                        <div class="fixed">
+                                            <input name="friends" id="friends" type="checkbox" value="1">
+                                        </div>
+                                        <label for="friends">
+                                            Только мои друзья
+                                        </label>
+                                    </div>
+                                </div>
                             </div>
                         </form>
 
@@ -603,10 +617,18 @@
                                 <div class="sort">
                                     <span>Сортировать по:</span>
                                     <div class="sortby dropdown">
-                                        <a href="#" class="dropdown-button dropdown-arrow">количеству комментариев</a>
+                                        <a href="#" class="dropdown-button dropdown-arrow">рейтингу</a>
                                         <div class="dropdown-container">
                                             <div class="container-body">
                                                 <ul class="select-list">
+                                                    <li data-value="login">
+                                                        <i class="fa fa-user"></i>
+                                                        <span>логину</span>
+                                                    </li>
+                                                    <li data-value="rank">
+                                                        <i class="fa fa-user-circle-o"></i>
+                                                        <span>рангу</span>
+                                                    </li>
                                                     <li data-value="published_at">
                                                         <i class="fa fa-calendar-o"></i>
                                                         <span>дате регистрации</span>
@@ -615,13 +637,13 @@
                                                         <i class="fa fa-signal"></i>
                                                         <span>рейтингу</span>
                                                     </li>
-                                                    <li data-value="questions">
-                                                        <i class="fa fa-question"></i>
-                                                        <span>количеству вопросов</span>
-                                                    </li>
                                                     <li data-value="articles">
                                                         <i class="fa fa-book"></i>
                                                         <span>количеству статей</span>
+                                                    </li>
+                                                    <li data-value="questions">
+                                                        <i class="fa fa-question"></i>
+                                                        <span>количеству вопросов</span>
                                                     </li>
                                                     <li data-value="answers">
                                                         <i class="fa fa-comments-o"></i>
