Личный кабинет: уведомления пользователя.

--- a/app/profile-friends.html
+++ b/app/profile-friends.html
@@ -709,10 +709,10 @@
                                     <div class="input-group">
                                         <input class="input" type="text" name="query" placeholder="Поиск пользователей" value="">
                                         <span class="input-group-button">
-                                    <button type="submit" form="search-form-2" value="" class="button accent-button">
-                                        <i class="fa fa-search"></i>
-                                    </button>
-                                </span>
+                                            <button type="submit" form="search-form-2" value="" class="button accent-button">
+                                                <i class="fa fa-search"></i>
+                                            </button>
+                                        </span>
                                     </div>
                                     <div class="form-group input-group">
                                         <div class="fixed">
@@ -767,7 +767,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="list users-list">
+                                    <div class="list users-list p-t-0">
                                         <div class="item user online">
                                             <a href="profile.html" class="user-avatar big">
                                                 <img src="/img/uploads/ivan.jpg" alt="" class="avatar">
