--- a/app/profile-notifications.html
+++ b/app/profile-notifications.html
@@ -711,55 +711,90 @@
                                             Всего<span class="hidden-xs"> уведомлений</span>:
                                             <span class="count">11</span>
                                         </div>
+                                        <div class="sort">
+                                            <span>Сортировать по:</span>
+                                            <div class="sortby">
+                                                дате
+                                            </div>
+                                            <div class="direction">
+                                                <button data-value="desc" title="По убыванию" class="active">
+                                                    <i class="fa fa-angle-down"></i>
+                                                </button>
+                                                <button data-value="asc" title="По возростанию">
+                                                    <i class="fa fa-angle-up"></i>
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
-                                    <div class="list">
+                                    <div class="filters">
+                                        <button class="button default-button small-button pull-right">
+                                            Удалить все
+                                        </button>
+                                    </div>
+                                    <div class="list p-t-0">
                                         <div class="item notification">
-                                            <div>
+                                            <div class="icon">
                                                 <i class="fa fa-thumbs-up info"></i>
+                                            </div>
+                                            <div class="content">
                                                 <span class="small-text date">25 мин. назад</span>
                                                 <span class="text">
                                                     Пользователю <a href="profile.html">Support</a> понравилась ваша статья.
                                                 </span>
                                             </div>
-                                            <a href="#" class="delete-button">
-                                                <i class="fa fa-close"></i>
-                                            </a>
+                                            <div class="buttons">
+                                                <a href="#" class="delete-button">
+                                                    <i class="fa fa-close"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="item notification">
-                                            <div>
+                                            <div class="icon">
                                                 <i class="fa fa-comment success"></i>
+                                            </div>
+                                            <div class="content">
                                                 <span class="small-text date">1 ч. назад</span>
                                                 <span class="text">
                                                     Роман (roman@email.com) оставил комментарий к вашей статье.
                                                 </span>
                                             </div>
-                                            <a href="#" class="delete-button">
-                                                <i class="fa fa-close"></i>
-                                            </a>
+                                            <div class="buttons">
+                                                <a href="#" class="delete-button">
+                                                    <i class="fa fa-close"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="item notification">
-                                            <div>
+                                            <div class="icon">
                                                 <i class="fa fa-user-plus success"></i>
+                                            </div>
+                                            <div class="content">
                                                 <span class="small-text date">16 ч. назад</span>
                                                 <span class="text">
                                                     Зарегистрировался новый пользователь <a href="profile.html">Denwebart</a>.
                                                 </span>
                                             </div>
-                                            <a href="#" class="delete-button">
-                                                <i class="fa fa-close"></i>
-                                            </a>
+                                            <div class="buttons">
+                                                <a href="#" class="delete-button">
+                                                    <i class="fa fa-close"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                         <div class="item notification">
-                                            <div>
+                                            <div class="icon">
                                                 <i class="fa fa-trash danger"></i>
+                                            </div>
+                                            <div class="content">
                                                 <span class="small-text date">2 д. назад</span>
                                                 <span class="text">
                                                     Ваш вопрос "Как быть?" был удален.
                                                 </span>
                                             </div>
-                                            <a href="#" class="delete-button">
-                                                <i class="fa fa-close"></i>
-                                            </a>
+                                            <div class="buttons">
+                                                <a href="#" class="delete-button">
+                                                    <i class="fa fa-close"></i>
+                                                </a>
+                                            </div>
                                         </div>
                                     </div>
                                     <div class="pagination">
