--- a/app/users.html
+++ b/app/users.html
@@ -180,12 +180,10 @@
 
                             <div class="pull-right">
                                 <div class="user-panel">
-                                    <!---->
-                                    <!--<div><span class="visible-lg">LG</span></div>-->
-                                    <!--<div><span class="visible-md">MD</span></div>-->
-                                    <!--<div><span class="visible-sm">SM</span></div>-->
-                                    <!--<div><span class="visible-xs">XS</span></div>-->
-                                    <!---->
+                                    <!--<div><span class="visible-lg">LG</span></div>
+                                    <div><span class="visible-md">MD</span></div>
+                                    <div><span class="visible-sm">SM</span></div>
+                                    <div><span class="visible-xs">XS</span></div>-->
 
                                     <div class="notifications pull-left dropdown">
                                         <a href="#" class="notification dropdown-button"><i class="fa fa-bell-o dropdown-arrow"></i></a>
@@ -370,24 +368,17 @@
                                             <i class="fa fa-bars"></i>
                                         </a>
                                         <div class="dropdown-container">
-                                            <div class="container-header">
-                                                <a href="profile.html" class="title">
-                                                    <i class="fa fa-user"></i>
-                                                    Мой профиль
-                                                </a>
-                                            </div>
-                                            <div class="delimiter"></div>
                                             <div class="container-body">
                                                 <ul class="menu user-menu">
+                                                    <li><a href="profile.html"><i class="fa fa-user"></i><span>Профиль</span></a></li>
                                                     <li><a href="profile-cars.html"><i class="fa fa-car"></i><span>Автомобили</span></a></li>
                                                     <li><a href="profile-questions.html"><i class="fa fa-question-circle"></i><span>Вопросы</span></a></li>
                                                     <li><a href="profile-articles.html"><i class="fa fa-book"></i><span>Журнал</span></a></li>
                                                     <li><a href="profile-comments.html"><i class="fa fa-comment"></i><span>Комментарии</span></a></li>
                                                     <li><a href="profile-answers.html"><i class="fa fa-comments"></i><span>Ответы</span></a></li>
-                                                    <li><a href="profile-messages.html"><i class="fa fa-paper-plane"></i><span>Сообщения</span></a></li>
                                                     <li><a href="profile-saved.html"><i class="fa fa-heart"></i><span>Сохраненное</span></a></li>
                                                     <li><a href="profile-subscriptions.html"><i class="fa fa-newspaper-o"></i><span>Подписки</span></a></li>
-                                                    <li><a href="profile-notifications.html"><i class="fa fa-bell"></i><span>Уведомления</span></a></li>
+                                                    <li><a href="profile-friends.html"><i class="fa fa-handshake-o"></i><span>Друзья</span></a></li>
                                                 </ul>
                                             </div>
                                         </div>
